2025-11-12  Oliver Kiddle  <opk@zsh.org>

	* 54037: Src/Zle/zle_refresh.c: fix to highlight layers where
	special is assigned a low layer

	* 54036: Src/prompt.c, Src/Zle/complist.c, Src/Zle/zle_refresh.c:
	fixes related to prompt attribute leftovers

2025-11-10  Bart Schaefer  <schaefer@zsh.org>

	* 54064: Src/params.c, Test/K01nameref.ztst: avoid crash on named
	references to argv/ARGC, improve syntax checks in valid_nameref().
	Leaves some edgecase issues unresolved (see tests).

2025-11-10  Oliver Kiddle  <opk@zsh.org>

	* 53402, 54042: Src/Zle/termquery.c, Src/Zle/zle_main.c,
	Doc/Zsh/params.yo, Doc/Zsh/zle.yo: make timeout for terminal queries
	configurable via a .term.querywait variable, clarify documentation
	and include fewer of the new extensions by default

	* 53438: Doc/Zsh/params.yo, Doc/Zsh/zle.yo, Src/Zle/termquery.c,
	Src/Zle/zle.h, Src/Zle/zle_refresh.c, Src/Zle/zle_vi.c, Src/init.c,
	Src/zsh.h: support for changing terminal cursor shape and colour

	* 53404: Doc/Zsh/params.yo, Src/Zle/termquery.c, Src/Zle/zle_main.c,
	Src/builtin.c, Src/init.c, Src/input.c, Src/loop.c, Src/prompt.c,
	Src/subst.c, Src/utils.c, Src/zsh.h, Test/X04zlehighlight.ztst,
	Test/X06termquery.ztst: terminal integration with semantic markers

	* 53379, 53380: Doc/Zsh/params.yo, Test/X04zlehighlight.ztst,
	Src/prompt.c: autoload nearcolor based on truecolor detection

	* 53377: Doc/Zsh/zle.yo, Src/Zle/termquery.c, Src/Zle/zle_misc.c,
	Src/Zle/zle_utils.c, Test/X06termquery.ztst: support OSC52 paste
	sequence with the "* and "+ vi registers

	* 53372, 53375: Doc/Zsh/params.yo, Src/Zle/termquery.c,
	Src/Zle/zle.mdd, Src/Zle/zle_main.c, Test/X04zlehighlight.ztst,
	Test/X06termquery.ztst: query terminal properties on ZLE startup

2025-11-09  Bart Schaefer  <schaefer@zsh.org>

	* Philippe: 54057: Src/params.c, Src/zsh.h, Test/K01nameref.ztst:
	add VALFLAG_REFSLICE to enable assignment through named reference
	to change type of the referent

2025-11-03  Oliver Kiddle  <opk@zsh.org>
